# FactGap-PR-Reviewer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test_rag.py
.factgap/: config.yml
.github/workflows/: factgap-pr-analysis.yml  factgap-pr-chat.yml
apps/api/: .env.example  AGENTS.md  check_data.py  cleanup_user_data.py  cleanup_working.py  clear_embeddings.py  clear_embeddings_batch.py  compare_rag.py  debug_rag.py  full_reindex.py  index_repo.py  index_repo_optimized.py  manage_embeddings.py  requirements.txt  simple_cleanup.py  test_rag_local.py  test_rag_system.py  test_simple_reindex.py
apps/api/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts
factgap/: __init__.py
factgap/chunking/: __init__.py  optimized.py  splitters.py
factgap/cli/: __init__.py  debug_mcp.py  debug_pr_analyze.py  debug_pr_chat.py  mcp.py  pr_analyze.py  pr_chat.py
factgap/db/: __init__.py  supabase_client.py
factgap/discovery/: __init__.py  fast.py
factgap/mcp_server/: __init__.py  server.py
factgap/notion/: __init__.py  client.py
factgap/reviewer/: __init__.py  analyzer.py  github_api.py  prompts.py
supabase/migrations/: 001_create_rag_chunks.sql  002_create_match_chunks_function.sql  003_create_users_table.sql  004_create_connected_repos_table.sql  005_create_connected_notion_pages_table.sql  006_add_user_id_to_rag_chunks.sql  007_create_match_chunks_user_function.sql
test-repo/: README.md
test-repo/src/: main.py
tests/: __init__.py  test_chunking.py  test_citations.py  test_fast_discovery.py  test_integration.py  test_optimized_chunking.py
(+27 files in other folders)
